web-page/css/creative.css
/* ... */
.btn-primary:hover,
.btn-primary:focus,
.btn-primary.focus,
.btn-primary:active,
.btn-primary.active,
.open > .dropdown-toggle.btn-primary {
  color: #cc4552;
  background-color: #ff6;
}

.btn-primary:active,
.btn-primary.active,
.open > .dropdown-toggle.btn-primary {
  background-image: none;
}

.btn-primary.disabled,
.btn-primary[disabled],
fieldset[disabled] .btn-primary,
.btn-primary.disabled:hover,
.btn-primary[disabled]:hover,
fieldset[disabled] .btn-primary:hover,
.btn-primary.disabled:focus,
.btn-primary[disabled]:focus,
fieldset[disabled] .btn-primary:focus,
.btn-primary.disabled.focus,
.btn-primary[disabled].focus,
fieldset[disabled] .btn-primary.focus,
.btn-primary.disabled:active,
.btn-primary[disabled]:active,
fieldset[disabled] .btn-primary:active,
.btn-primary.disabled.active,
.btn-primary[disabled].active,
fieldset[disabled] .btn-primary.active {
  border-color: #d38147;
  background-color: #d38147;
}

.btn-primary .badge {
  color: #d38147;
  background-color: #fff;
}

.btn {
  border: 0;
  border-radius: 300px;
  font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 15px;
  font-weight: 300;
}

.btn:hover,
.btn:focus,
.btn.focus,
.btn:active,
.btn.active {
  text-color: #af2532;
}

.btn-xl {
  padding: 15px 30px;
  text-transform: uppercase;
}

iframe{
  display: block;
  position: absolute hidden;
  height: 1250px;
  width: 80%;
  margin: 0px auto;
  border: 1;
}

.section-heading {
  color: rgba(255,255,255,.9);
  text-shadow: 0.5px 0.5px #000000;
  position: absolute;
  text-align: center;
}

::-moz-selection {
  text-shadow: none;
  color: #fff;
  background: #222;
}

::selection {
  color: #fff;
  background: #222;
}

img::selection {
  color: #fff;
  background: 0 0;
}

img::-moz-selection {
  color: #fff;
  background: 0 0;
}

body {
  webkit-tap-highlight-color: #222;
}

/*For notification panel*/
.topcorner {
   position:absolute;
   top:22.5%;
   right:0;
   border: 0;
   width: 300px;
}
.hide_panel { /*Might help, but not so far*/
    display: none;  /*Used to make so there's never two notifications at a time*/
}
/*From material design bootstrap*/
.panel {
  border-radius: 2px;
  border: 0;
  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12);
}
.panel > .panel-heading,
.panel-default > .panel-heading {
  background: -webkit-linear-gradient(#721563, #802C73, #9C5B92);
  background: -o-linear-gradient(#721563, #802C73, #9C5B92);
  background: -moz-linear-gradient(#721563, #802C73, #9C5B92);
  background: linear-gradient(#721563, #802C73, #9C5B92);
}
.panel-primary > .panel-heading {
  background-color: #009688;
}
.panel-success > .panel-heading {
  background-color: #4caf50;
}
.panel-warning > .panel-heading {
  background-color: #ff5722;
}
[class*="panel-"] > .panel-heading {  /*To get rid of blue line separator between color and white content box*/
  color: rgba(255, 255, 255, 0.84);/*color: #eeeeee;*/
  border: 0;
}

.panel-title {
  color: #ffffff;
}

.vis-select input{
    margin:0;padding:0;
    -webkit-appearance:none;
       -moz-appearance:window;
            appearance:none;
}
.vis-select1 input{
    margin:0;padding:0;
    -webkit-appearance:none;
       -moz-appearance:window;
            appearance:none;
}
.fd {
  background-image: url(../img/radio/fd.png);
}
.sb {
  background-image: url(../img/radio/sb.png);
}
.cp {
  background-image: url(../img/radio/cp.png);
}
.wm {
  background-image: url(../img/radio/wm.png);
}
.ch {
  background-image: url(../img/radio/ch.png);
}
.bp {
  background-image: url(../img/radio/bp.png)
}
.sk {
  background-image: url(../img/radio/sk.png);
}

.vis-select input:active +.vis-s{opacity: .9;}
.vis-select input:checked +.vis-s{
  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
}
.vis-select1 input:active +.vis-s1{opacity: .9;}
.vis-select1 input:checked +.vis-s1{
  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
}
.vis-s{
    cursor:pointer;
    background-size:contain;
    background-repeat:no-repeat;
    display:inline-block;
    width:100px;height:100px;
    -webkit-transition: all 100ms ease-in;
       -moz-transition: all 100ms ease-in;
            transition: all 100ms ease-in;
}
.vis-s1{
    cursor:pointer;
    background-size:contain;
    background-repeat:no-repeat;
    display:inline-block;
    width:100px;height:100px;
    -webkit-transition: all 100ms ease-in;
       -moz-transition: all 100ms ease-in;
            transition: all 100ms ease-in;
}
.vis-s:hover{
    -webkit-filter: brightness(1.2) grayscale(.5) opacity(.9);
       -moz-filter: brightness(1.2) grayscale(.5) opacity(.9);
            filter: brightness(1.2) grayscale(.5) opacity(.9);
}
.vis-s1:hover{
    -webkit-filter: brightness(1.2) grayscale(.5) opacity(.9);
       -moz-filter: brightness(1.2) grayscale(.5) opacity(.9);
            filter: brightness(1.2) grayscale(.5) opacity(.9);
}

.portrait {
    width:  100%;
    height: auto;
    position: relative;
    float:left;
    text-align: center;
    margin: 0 1%;
}

.portrait-img{
  width: 80%;
  height: 80%;
}

@media (min-width:500px){
  .portrait {
      width:  30%;
      height: auto;
      position: relative;
      float:left;
      text-align: center;
      margin: 0 1%;
  }

  .portrait-img{
    width: 100%;
    height: 100%;
  }
}

@media (min-width:900px){
  .portrait {
      width:  12%;
      height: auto;
      position: relative;
      float:left;
      text-align: center;
      margin: 0 1%;
  }

  .portrait-img{
    width: 100%;
    height: 100%;
  }
}


.info-text{
  font-size: 14px;
}

.hasTooltip {
    position:relative;
}
.hasTooltip span {
    display:none;
}
/* ... */

